...
            app:layout_constraintBottom_toTopOf="@+id/postAuthorTextView"
            app:layout_constraintEnd_toStartOf="@+id/authorAvatarImageView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thumbnailImageView"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="sunt aut facere repellat provident occaecati excepturi optio reprehenderit" />

        <TextView
            android:id="@+id/postAuthorTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
...
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/postTitleTextView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/postTitleTextView"
            app:layout_constraintTop_toBottomOf="@+id/postTitleTextView"
            tools:text="Leanne Graham" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
